--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
 
 			<p>[SecureAuth] is a blockchain based authentication system that leverages Solana blockchain, NFTs, and PGP signatures to verify products, ensuring authenticity and preventing counterfeiting.</p>
 
-			<img src="https://github.com/WykeTheAlchemist/PYUSD-PORTAL-HACKATHON-/raw/main/%5BSecureAuth%5D%20logo.png" alt="[SecureAuth] Favicon">
+			<img src="https://github.com/WykeTheAlchemist/PYUSD-PORTAL-HACKATHON-/raw/main/%5BSecureAuth%5D%20logo.png" width="324" height="350" alt="[SecureAuth] Favicon">
 
 		</section>
 
@@ -66,9 +66,9 @@
 
 			<ul>
 
-				<li><img src="https://github.com/WykeTheAlchemist/PYUSD-PORTAL-HACKATHON-/raw/main/paypal-pyusd-solana-blockchain.jpg" alt="Product 1"><p>Create a digitally signed image to upload as authentication NFT</p></li>
+				<li><img src="https://github.com/WykeTheAlchemist/PYUSD-PORTAL-HACKATHON-/raw/main/paypal-pyusd-solana-blockchain.jpg" width="324" height="350" alt="Product 1"><p>Create a digitally signed image to upload as authentication NFT</p></li>
 
-				<li><img src="https://github.com/WykeTheAlchemist/PYUSD-PORTAL-HACKATHON-/raw/main/PYUSD-SOLANA%20GLOBE.jpg" alt="Product 2"><p>Scan QR Code to make or receive PYUSD payment</p></li>
+				<li><img src="https://github.com/WykeTheAlchemist/PYUSD-PORTAL-HACKATHON-/raw/main/PYUSD-SOLANA%20GLOBE.jpg" width="324" height="350" alt="Product 2"><p>Scan QR Code to make or receive PYUSD payment</p></li>
 
 				<li><img src="https://github.com/WykeTheAlchemist/PYUSD-PORTAL-HACKATHON-/raw/main/Phantom%20Wallet.png" alt="Product 3"><p>Obtain Phantom Wallet (No.1 Solana Wallet)</p></li>
 
