--- a/index.html
+++ b/index.html
@@ -22,15 +22,15 @@
 
 			<ul>
 
-				<li><a href="https://dynamic-thought-leadership-4.webnode.page/home/">Home</a></li>
+				<li><a href="https://secureauth.webnode.page/">Home</a></li>
 
-				<li><a href="https://dynamic-thought-leadership-4.webnode.page/about-us/">About</a></li>
+				<li><a href="https://secureauth.webnode.page/about-us/">About</a></li>
 
-				<li><a href="https://dynamic-thought-leadership-4.webnode.page/services/">Services</a></li>
+				<li><a href="https://secureauth.webnode.page/services/">Services</a></li>
 
-				<li><a href="https://wykethealchemist.github.io/5K-apital/">Referral Rewards</a></li>
+				<li><a href="https://secureauth.webnode.page/photo-gallery/">Gallery</a></li>
 
-				<li><a href="https://dynamic-thought-leadership-4.webnode.page/contact/">Contact</a></li>
+				<li><a href="https://secureauth.webnode.page/contact/">Contact</a></li>
 
 			</ul>
 
@@ -62,7 +62,7 @@
 
 		<section class="products">
 
-			<h2>Our Latest [SecureAuth] Initiative</h2>
+			<h2>  Our Latest [SecureAuth] Initiative</h2>
 
 			<ul>
 
