--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
 
 				<li><a href="https://secureauth.webnode.page/services/">Services</a></li>
 
-				<li><a href="https://secureauth.webnode.page/photo-gallery/">Gallery</a></li>
+				<li><a href="https://secureauth.webnode.page/our-work/">Our Work</a></li>
 
 				<li><a href="https://secureauth.webnode.page/contact/">Contact</a></li>
 
