--- a/index.html
+++ b/index.html
@@ -66,11 +66,11 @@
 
 			<ul>
 
-				<li><img src="https://github.com/WykeTheAlchemist/PYUSD-PORTAL-HACKATHON-/raw/main/paypal-pyusd-solana-blockchain.jpg" width="324" height="350" alt="Product 1"><p>Create a digitally signed image to upload as authentication NFT</p></li>
+				<li><img src="https://github.com/WykeTheAlchemist/PYUSD-PORTAL-HACKATHON-/raw/main/paypal-pyusd-solana-blockchain.jpg" width="324" height="350" alt="Product 1"><p><b><u>[Create]</u></b> a digitally signed image to upload as authentication NFT</p></li>
 
-				<li><img src="https://github.com/WykeTheAlchemist/PYUSD-PORTAL-HACKATHON-/raw/main/PYUSD-SOLANA%20GLOBE.jpg" width="324" height="350" alt="Product 2"><p>Scan QR Code to make or receive PYUSD payment</p></li>
+				<li><img src="https://github.com/WykeTheAlchemist/PYUSD-PORTAL-HACKATHON-/raw/main/PYUSD-SOLANA%20GLOBE.jpg" width="324" height="350" alt="Product 2"><p><b><u>[Scan]</u></b> QR Code to make or receive PYUSD payment</p></li>
 
-				<li><img src="https://github.com/WykeTheAlchemist/PYUSD-PORTAL-HACKATHON-/raw/main/Phantom%20Wallet.png" alt="Product 3"><p>Obtain Phantom Wallet (No.1 Solana Wallet)</p></li>
+				<li><img src="https://github.com/WykeTheAlchemist/PYUSD-PORTAL-HACKATHON-/raw/main/Phantom%20Wallet.png" alt="Product 3"><p><b><u>[Obtain]</u></b> Phantom Wallet (No.1 Solana Wallet)</p></li>
 
 			</ul>
 
