--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@
 
 				<li><img src="https://github.com/WykeTheAlchemist/PYUSD-PORTAL-HACKATHON-/raw/main/PYUSD-SOLANA%20GLOBE.jpg" width="324" height="350" alt="Product 2"><p><b><u>[Scan]</u></b> QR Code to make or receive PYUSD payment</p></li>
 
-				<li><img src="https://github.com/WykeTheAlchemist/PYUSD-PORTAL-HACKATHON-/raw/main/Phantom%20Wallet.png" alt="Product 3"><p><b><u>[Obtain]</u></b> Phantom Wallet (No.1 Solana Wallet)</p></li>
+				<li><img src="https://github.com/WykeTheAlchemist/PYUSD-PORTAL-HACKATHON-/raw/main/Phantom%20Wallet.png" alt="Product 3"><p><b><u><a href=https://phantom.app/learn/guides/how-to-create-a-new-wallet>[Obtain]</a></u></b> Phantom Wallet (No.1 Solana Wallet)</p></li>
 
 			</ul>
 
