--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
 
 			<p>Click the following button for [SecureAuth] User Guide</p>
 
-			<button><a href="https://github.com/WykeTheAlchemist/5K-apital/raw/main/5K-APITAL%20%20Concept%20Note.pdf">Learn More</a></button>
+			<button><a href="https://github.com/WykeTheAlchemist/PYUSD-PORTAL-HACKATHON-/raw/main/%5BSecureAuth%5D%20quick%20run-through%20manual.pdf">Learn More</a></button>
 
 		</section>
 
