--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
 
 			<ul>
 
-				<li><img src="https://github.com/WykeTheAlchemist/PYUSD-PORTAL-HACKATHON-/raw/main/paypal-pyusd-solana-blockchain.jpg" width="324" height="350" alt="Product 1"><p><b><u><a href=https://wykethealchemist.github.io/Digitally-Signed-Image-Generator>[Create]</a></u></b> a digitally signed image to upload as authentication NFT</p></li>
+				<li><img src="https://github.com/WykeTheAlchemist/PYUSD-PORTAL-HACKATHON-/raw/main/paypal-pyusd-solana-blockchain.jpg" width="324" height="350" alt="Product 1"><p><b><u><a href=https://wykethealchemist.github.io/Cryptographic-Stamp>[Create]</a></u></b> a digitally signed image to upload as authentication NFT</p></li>
 
 				<li><img src="https://github.com/WykeTheAlchemist/PYUSD-PORTAL-HACKATHON-/raw/main/PYUSD-SOLANA%20GLOBE.jpg" width="324" height="350" alt="Product 2"><p><b><u><a href=https://wykethealchemist.github.io/QR-CODE-SCANNER>[Scan]</a></u></b> QR Code to make or receive PYUSD payment</p></li>
 
